# migratour

./: Cargo.toml  README.md  db.toml
migrations/: 0001_create_users_table.down.sql  0001_create_users_table.up.sql  0001_creating_users_table.up.sql  0001_user_table.down.sql  0001_user_table.up.sql  0001_users_table.down.sql  0002_creating_orders_table.down.sql  0002_creating_orders_table.up.sql  0003_creating_creating.down.sql  0003_creating_creating.up.sql
src/: db.rs  lib.rs  main.rs
